adjusted requested changes

--- a/plugins/inputs/opcua_listener/sample.conf
+++ b/plugins/inputs/opcua_listener/sample.conf
@@ -221,10 +221,10 @@
     # use_unregistered_reads = false
 
 
-  ##Event Streaming
-  # [inputs.opcua_listener.event_streaming_input]
-    # streaming_interval = "10s"
-    # streaming_event_type = "ns=0;i=2041"
-    # streaming_node_ids = ["ns=2;s=0:East/Blue"]
-    # streaming_source_names = ["SourceName1", "SourceName2"]
-    # streaming_fields = ["Severity", "Message", "Time"]
+  ##Events to accept
+  # [[inputs.opcua_listener.event]]
+    # interval = "10s"
+    # event_type = "ns=0;i=2041"
+    # node_ids = ["ns=2;s=0:East/Blue"]
+    # source_names = ["SourceName1", "SourceName2"]
+    # fields = ["Severity", "Message", "Time"]
