added default config values, adjusted sample conf and readme

--- a/plugins/inputs/opcua_listener/sample.conf
+++ b/plugins/inputs/opcua_listener/sample.conf
@@ -221,10 +221,21 @@
     # use_unregistered_reads = false
 
 
-  ##Events to accept
-  # [[inputs.opcua_listener.event]]
-    # interval = "10s"
-    # event_type = "ns=0;i=2041"
-    # node_ids = ["ns=2;s=0:East/Blue"]
-    # source_names = ["SourceName1", "SourceName2"]
-    # fields = ["Severity", "Message", "Time"]
+  ## Multiple event groups are allowed.
+  # [[inputs.opcua_listener.eventgroup]]
+  #   sampling_interval = "10s"
+  #   namespace = ""
+  #   identifier_type = ""
+  #   source_names = ["SourceName1", "SourceName2"]
+  #   fields = ["Severity", "Message", "Time"]
+  #
+  #   [inputs.opcua_listener.eventgroup.event_type_node]
+  #     namespace = ""
+  #     identifier_type = ""
+  #     identifier = ""
+  #
+  #   [[inputs.opcua_listener.eventgroup.node_ids]]
+  #     namespace = ""
+  #     identifier_type = ""
+  #     identifier = ""
+
