--- a/plugins/inputs/opcua_listener/sample.conf
+++ b/plugins/inputs/opcua_listener/sample.conf
@@ -224,6 +224,7 @@
   ## Multiple event groups are allowed.
   # [[inputs.opcua_listener.eventgroup]]
   #   sampling_interval = "10s"
+  #   queue_size = 10
   #   namespace = ""
   #   identifier_type = ""
   #   source_names = ["SourceName1", "SourceName2"]
